<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:src="@drawable/logo" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_man_vs_man"
            android:textSize="20sp" />

        <Button
            android:id="@+id/manualBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:tag="manual"
            android:text="@string/new_game" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ai"
            android:textSize="20sp" />

        <Button
            android:id="@+id/easyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:tag="easy"
            android:text="@string/easy" />

        <Button
            android:id="@+id/difficultBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:tag="difficult"
            android:text="@string/difficult" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/startLayout"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="0.1"
        android:orientation="horizontal"
        android:weightSum="1">

        <EditText
            android:id="@+id/player1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:ems="10"
            android:hint="@string/player_x"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/player2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:ems="10"
            android:visibility="invisible"
            android:hint="@string/player_o"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/startBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:text="@string/button_start" />

    </LinearLayout>
</LinearLayout>
